<resources>
    <string name="app_name">QuizApp</string>
    <string name="falseString">FALSE</string>
    <string name="trueString">TRUE</string>
    <string name="correct_answer">CORRECT</string>
    <string name="incorrect_answer">INCORRECT</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="restart">RESTART</string>

    <string name="question1">Działa1 ?</string>
    <string name="question2">Działa2 ?</string>
    <string name="question3">Działa3 ?</string>

    <string name="show_cheat_text">Want to see correct answer ?</string>
    <string name="cheat">CHEAT</string>
    <string name="show">SHOW ANSWER</string>
</resources>